# afbidl

./: README.md  afbidl-schema.json  example-api-gps.yml  example-api-radio.json  example-api-radio.yml  exprefs.c  exprefs.h  getref.c  getref.h  idl-monitor.json  json2c.c  json2c.h  main-exprefs.c  main-genskel.c  main-json2c.c  meson.build  spec-afbidl.md  vscode-YLS-HOWTO.md
tmp/: afbidl-schema.json  api.html.must  apigps.json  apiradio.json  apitool.js  apitool.scm  c-tools.js  c-tools.scm  document-hierachie.odg  idl-demo.json  logging.scm  mkapihtml  mkapijson  o-tools.js  schema.array.must  schema.must  schema.object.must  spec-afbidl.new.md  style.css  test.sh
tmp/hand_generated/: CMakeLists.txt  genutils.c  genutils.h  gps_binding.c  gps_binding.h  radio_binding.h  user_code.c
tmp/hand_generated/conf.d/cmake/: config.cmake
tmp/hand_generated/conf.d/wgt/: config.xml.in
